--- a/index.html
+++ b/index.html
@@ -11,13 +11,12 @@
 	<title>XVI Young Researchers Workshop in Geometry, Mechanics and Control</title>
 </head>
 <body>
-	<h1>XVI Young Researchers Workshop in Geometry, Mechanics and Control</h1>
 
 
 	<div class="container">
 		<!-- Content here -->
 
-		<nav class="navbar navbar-dark bg-primary">
+		<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
 			<!-- Navbar content -->
 
 			<a class="navbar-brand" href="#">Navbar</a>
@@ -39,6 +38,7 @@
 			</div>
 		</nav>
 
+		<h1>XVI Young Researchers Workshop in Geometry, Mechanics and Control</h1>
 
 	</div>
 
