--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 <body>
 
 
-	<div class="container">
-		<!-- Content here -->
+	<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+		<div class="container">
+			<!-- Content here -->
 
-		<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
 			<!-- Navbar content -->
 
 			<a class="navbar-brand" href="#">Navbar</a>
@@ -36,11 +36,13 @@
 					</li>
 				</ul>
 			</div>
-		</nav>
-
+		</div>
+	</nav>
+	
+	<div class="container">
 		<h1>XVI Young Researchers Workshop in Geometry, Mechanics and Control</h1>
-
 	</div>
+
 
 
 
