--- a/index.html
+++ b/index.html
@@ -8,16 +8,15 @@
 	<!-- Bootstrap CSS -->
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 
+	<link rel="stylesheet" type="text/css" href="./style.css">
+
 	<title>XVI Young Researchers Workshop in Geometry, Mechanics and Control</title>
 </head>
 <body>
 
-
+<!--
 	<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
 		<div class="container">
-			<!-- Content here -->
-
-			<!-- Navbar content -->
 
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
@@ -37,19 +36,69 @@
 			</div>
 		</div>
 	</nav>
+-->
 
+<div class="jumbotron header">
 	<div class="container">
-		<h1>XVI Young Researchers Workshop in Geometry, Mechanics and Control</h1>
+		<h1 class="display-3 main-title"><strong>XVI Young Researchers Workshop in Geometry, Mechanics and Control</strong></h1>
 	</div>
+</div>
+<div class="container">
+	<p class="lead">The 16th Young Researchers Workshop in Geometry, Mechanics, and Control is a yearly event to promote young researchers in the field of <strong>differential geometry</strong> and its relations to <strong>mechanics and control theory</strong>. The 16th edition will take place in <strong>Barcelona</strong>. This event offers researchers in the field, especially to the younger participants, a platform to share their latest results to an international audience and discuss current topics. The workshop will contain three mini-courses in key topics in the field, selected talks proposed by the participants and a poster session.</p>
+
+	<h3>Location and dates:</h3>
+	<ul>
+		<li><strong>Where:</strong> Barcelona, Catalonia, Spain</li>
+		<li><strong>When:</strong> December 1-3, 2021 (to be confirmed)</li>
+		<li><strong>How:</strong> Registration opens on March</li>
+	</ul>
+
+	<h3>Organization comitee:</h3>
+	<ul>
+		<li>Jordi Gaset (Universitat Autònoma de Barcelona) jordi.gaset(at)uab.cat</li>
+		<li>Cédric Oms (Universitat Politècnica de Catalunya) cedric.oms(at)upc.edu</li>
+		<li>Xavier Rivas (Universitat Politècnica de Catalunya) xavier.rivas(at)upc.edu</li>
+	</ul>
+	<h3>Scientific comitee:</h3>
+	<ul>
+		<li dir="ltr"> <a href="http://dma.aq.upm.es/profesor/barbero_m/" target="_blank" rel="noopener noreferrer">María Barbero</a> (Universidad Politécnica de Madrid, Spain)</li>
+		<li dir="ltr"> Cédric M. Campos (Universidad Rey Juan Carlos, Spain)</li>
+		<li dir="ltr"> <a href="https://www.uni-math.gwdg.de/mjotz/home.html" target="_blank" rel="noopener noreferrer">Madeleine Jotz Lean</a> (Georg-August Universität Göttingen, Germany)</li>
+		<li dir="ltr"> <a href="http://www.lmd.ens.fr/gay-balmaz/Home.html" target="_blank" rel="noopener noreferrer">François Gay-Balmaz</a> (CNRS, École Normale Supérieure, France)</li>
+		<li dir="ltr"> <a href="https://mast.queensu.ca/~bahman/" target="_blank" rel="noopener noreferrer">Bahman Gharesifard</a> (Queen&#8217;s University, Canada)</li>
+		<li dir="ltr"> <a href="https://smp.uq.edu.au/profile/5992/ramiro-lafuente" target="_blank" rel="noopener noreferrer">Ramiro Lafuente </a> (The University of Queensland, Australia)</li>
+		<li dir="ltr"> <a href="http://scala.uc3m.es/juanmargalef/" target="_blank" rel="noopener noreferrer">Juan Margalef </a> (Penn State&#8217;s University, USA)</li>
+		<li dir="ltr"> <a href="https://www.ltd.tf.fau.de/person/rodrigo-takuro-sato-martin-de-almagro/" target="_blank" rel="noopener noreferrer">Rodrigo T. Sato Martín de Almagro </a> (Friedrich-Alexander-Universität Erlangen-Nürnberg, Germany)</li>
+	</ul>
+
+	<h3>Previous editions</h3>
+	<ul>
+		<li dir="ltr"> <a href="http://utrechtgeometrycentre.nl/15iyrw/" target="_blank" rel="noopener noreferrer"> XV edition </a></li>
+		<li dir="ltr"> <a href="https://www.uni-goettingen.de/de/14th+international+young+researchers+workshop+on+geometry%2C+mechanics+and+control/607463.html" target="_blank" rel="noopener noreferrer"> XIV edition </a></li>
+		<li dir="ltr"><a href="https://www.uni-goettingen.de/de/14th+international+young+researchers+workshop+on+geometry%2C+mechanics+and+control/607463.html" target="_blank" rel="noopener noreferrer"> </a><a href="https://www.uc.pt/en/congressos/13yrw" target="_blank" rel="noopener noreferrer"> XIII edition </a></li>
+		<li dir="ltr"><a href="https://www.uc.pt/en/congressos/13yrw" target="_blank" rel="noopener noreferrer"> </a><a href="https://events.math.unipd.it/12YRW/" target="_blank" rel="noopener noreferrer"> XII edition </a></li>
+		<li dir="ltr"><a href="https://events.math.unipd.it/12YRW/" target="_blank" rel="noopener noreferrer"> </a><a href="https://www.ull.es/portal/agenda/tag/geometry/" target="_blank" rel="noopener noreferrer"> XI edition </a></li>
+		<li dir="ltr"><a href="https://www.ull.es/portal/agenda/tag/geometry/" target="_blank" rel="noopener noreferrer"> </a><a href="https://team.inria.fr/mctao/10th-international-young-researcher-workshop-on-geometry-mechanics-and-control-january-13-15-2016/" target="_blank" rel="noopener noreferrer"> X edition </a></li>
+		<li dir="ltr"><a href="https://team.inria.fr/mctao/10th-international-young-researcher-workshop-on-geometry-mechanics-and-control-january-13-15-2016/" target="_blank" rel="noopener noreferrer"> </a><a href="https://iuma.unizar.es/en/node/217" target="_blank" rel="noopener noreferrer"> IX edition </a></li>
+	</ul>
+
+
+</div>
+
+<div class="container-fluid footer">
+	<div class="container">
+		<h4>Contact information:</h4>
+		<p>16ywgmc@gmail.com</p>
+	</div>
+</div>
 
 
 
+<!-- Optional JavaScript; choose one of the two! -->
 
-	<!-- Optional JavaScript; choose one of the two! -->
-
-	<!-- Option 1: jQuery and Bootstrap Bundle (includes Popper) -->
-	<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
+<!-- Option 1: jQuery and Bootstrap Bundle (includes Popper) -->
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
 
 </body>
 </html>
