--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
 <div class="jumbotron header">
 	<div class="container">
-		<h1 class="display-3 main-title"><strong>XVI Young Researchers Workshop in Geometry, Mechanics and Control</strong></h1>
+		<h1 class="main-title"><strong>XVI Young Researchers Workshop in Geometry, Mechanics and Control</strong></h1>
 	</div>
 </div>
 <div class="container">
