--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
 		<li><strong>Where:</strong> Barcelona, Catalonia, Spain</li>
 		<li><strong>When:</strong> December 1-3, 2021 (to be confirmed)</li>
 		<li><strong>How:</strong> Registration opens on March</li>
+		<li><strong>Other questions?</strong> Contact us at 16ywgmc(at)gmail.com</li>
 	</ul>
 
 	<h3>Organization comitee:</h3>
@@ -88,7 +89,7 @@
 <div class="container-fluid footer">
 	<div class="container">
 		<h4>Contact information:</h4>
-		<p>16ywgmc@gmail.com</p>
+		<p>16ywgmc(at)gmail.com</p>
 	</div>
 </div>
 
