--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 	<ul>
 		<li><strong>Where:</strong> Barcelona, Catalonia, Spain</li>
 		<li><strong>When:</strong> December 1-3, 2021 (to be confirmed)</li>
-		<li><strong>How:</strong> Registration opens on March</li>
+		<li><strong>How:</strong> Registration opens in March</li>
 		<li><strong>Other questions?</strong> Contact us at <a href = "mailto: 16ywgmc@gmail.com">16ywgmc(at)gmail.com</a></li>
 	</ul>
 
