--- a/index.html
+++ b/index.html
@@ -53,6 +53,12 @@
 		<li><strong>How:</strong> Registration opens in March</li>
 		<li><strong>Other questions?</strong> Contact us at <a href = "mailto: 16ywgmc@gmail.com">16ywgmc(at)gmail.com</a></li>
 	</ul>
+	<h3>Courses:</h3>
+	<ul>
+		<li><strong>Generalized geometry and complex Dirac structures</strong> by Roberto Rubio (Universitat de Barcelona).</li>
+		<li><strong>An introduction to Information Geometry: Dynamics on Statistical Manifolds</strong> by Luigi Malagó (Romanian Institute of Science and Technology – RIST)</li>
+		<li><strong>Graph-based optimal control with application to autonomous driving</strong> by Kathrin Flaßkamp (Universität des Saarlandes)</li>
+	</ul>
 
 	<h3>Organization comitee:</h3>
 	<ul>
