--- a/index.html
+++ b/index.html
@@ -53,11 +53,12 @@
 		<li><strong>How:</strong> Registration opens in March</li>
 		<li><strong>Other questions?</strong> Contact us at <a href = "mailto: 16ywgmc@gmail.com">16ywgmc(at)gmail.com</a></li>
 	</ul>
+	
 	<h3>Courses:</h3>
 	<ul>
 		<li><strong>Generalized geometry and complex Dirac structures</strong> by Roberto Rubio (Universitat de Barcelona).</li>
-		<li><strong>An introduction to Information Geometry: Dynamics on Statistical Manifolds</strong> by Luigi Malagó (Romanian Institute of Science and Technology – RIST)</li>
-		<li><strong>Graph-based optimal control with application to autonomous driving</strong> by Kathrin Flaßkamp (Universität des Saarlandes)</li>
+		<li><strong>An introduction to Information Geometry: Dynamics on Statistical Manifolds</strong> by Luigi Malagó (Romanian Institute of Science and Technology – RIST).</li>
+		<li><strong>Graph-based optimal control with application to autonomous driving</strong> by Kathrin Flaßkamp (Universität des Saarlandes).</li>
 	</ul>
 
 	<h3>Organization comitee:</h3>
@@ -66,6 +67,7 @@
 		<li>Cédric Oms (Universitat Politècnica de Catalunya) cedric.oms(at)upc.edu</li>
 		<li>Xavier Rivas (Universitat Politècnica de Catalunya) xavier.rivas(at)upc.edu</li>
 	</ul>
+	
 	<h3>Scientific comitee:</h3>
 	<ul>
 		<li dir="ltr"> <a href="http://dma.aq.upm.es/profesor/barbero_m/" target="_blank" rel="noopener noreferrer">María Barbero</a> (Universidad Politécnica de Madrid, Spain)</li>
@@ -88,7 +90,6 @@
 		<li dir="ltr"><a href="https://www.ull.es/portal/agenda/tag/geometry/" target="_blank" rel="noopener noreferrer"> </a><a href="https://team.inria.fr/mctao/10th-international-young-researcher-workshop-on-geometry-mechanics-and-control-january-13-15-2016/" target="_blank" rel="noopener noreferrer"> X edition </a></li>
 		<li dir="ltr"><a href="https://team.inria.fr/mctao/10th-international-young-researcher-workshop-on-geometry-mechanics-and-control-january-13-15-2016/" target="_blank" rel="noopener noreferrer"> </a><a href="https://iuma.unizar.es/en/node/217" target="_blank" rel="noopener noreferrer"> IX edition </a></li>
 	</ul>
-
 
 </div>
 
