--- a/index.html
+++ b/index.html
@@ -1,112 +1,131 @@
 <!doctype html>
 <html lang="en">
-<head>
-	<!-- Required meta tags -->
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	<head>
+		<!-- Required meta tags -->
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<!-- Bootstrap CSS -->
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+		<!-- Bootstrap CSS -->
+		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
 
-	<link rel="stylesheet" type="text/css" href="./style.css">
+		<link rel="stylesheet" type="text/css" href="./css/style.css">
 
-	<title>XVI Young Researchers Workshop in Geometry, Mechanics and Control</title>
-</head>
-<body>
+		<title>Xavier Rivas</title>
 
-<!--
-	<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-		<div class="container">
+		<!-- Global site tag (gtag.js) - Google Analytics -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=G-RG1PTVSHCG"></script>
+		<script>
+			window.dataLayer = window.dataLayer || [];
+			function gtag(){dataLayer.push(arguments);}
+			gtag('js', new Date());
 
-			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-				<span class="navbar-toggler-icon"></span>
-			</button>
-			<div class="collapse navbar-collapse" id="navbarNavDropdown">
-				<ul class="navbar-nav">
-					<li class="nav-item active">
-						<a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="#">Location</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="#">Schedule</a>
-					</li>
+			gtag('config', 'G-RG1PTVSHCG');
+		</script>
+	</head>
+	<body>
+
+		<div class="container mt-4">
+			<div class='row'>
+				<div class="col-3">
+					
+					<img src="./img/bor.jpg" class="img-thumbnail rounded" alt="xavi">
+
+				</div>
+				<div class="col-9">
+					<h1 class="h1 blue name">Xavier Rivas</h1>
+					<p class='lead'>Departament de Matemàtiques, Universitat Politècnica de Catalunya</p>
+					<dl class="row">
+						<dt class="col-sm-2">Postal adress</dt>
+						<dd class="col-sm-10">Campus Nord, edifici C3, despatx 102.<br> C. Jordi Girona, 1. 08034 Barcelona, Catalunya.</dd>
+						<dt class="col-sm-2">e-mail</dt>
+						<dd class="col-sm-10">xavier.rivas(at)upc.edu</dd>
+						<dt class="col-sm-2">web page</dt>
+						<dd class="col-sm-10"><a href="https://web.mat.upc.edu/xavier.rivas/">web.mat.upc.edu/xavier.rivas</a><br>
+						<a href="http://xavirivas.com">xavirivas.com</a></dd>
+						<dt class="col-sm-2">ORCID code</dt>
+						<dd class="col-sm-10"><div itemscope itemtype="https://schema.org/Person"><a itemprop="sameAs" content="https://orcid.org/0000-0002-4175-5157" href="https://orcid.org/0000-0002-4175-5157" target="orcid.widget" rel="me noopener noreferrer" style="vertical-align:top;"><img src="https://orcid.org/sites/default/files/images/orcid_16x16.png" style="width:1em;margin-right:.5em;" alt="ORCID iD icon">0000-0002-4175-5157</a></div></dd>
+						<dt class="col-sm-2">Other links</dt>
+						<dd class="col-sm-10"><a href="https://arxiv.org/a/rivas_x_1.html" target="_blank">arxiv.org</a><br>
+						<a href="https://www.researchgate.net/profile/Xavier-Rivas-2" target="_blank">ResearchGate</a><br>
+						<a href="https://futur.upc.edu/XavierRivasGuijarro" target="_blank">Futur UPC</a><br>
+						<a href="https://scholar.google.es/citations?user=MyVZoPMAAAAJ" target="_blank">Google Scholar</a><br>
+						<a href="https://publons.com/researcher/4705307/xavier-rivas/" target="_blank">ResearcherID</a></dd>
+					</dl>
+					
+				</div>
+			</div>
+
+			<hr class="hr-blue my-4">
+
+			<div class="row">
+				<h2 class="blue">&#9632; Research</h2>
+
+				<p>I develop my research in differential geometry and its applications to mathematical physics, mechanics and field theory. I am part of the <a href="https://geomap.upc.edu/en">GEOMVAP</a> group. We collaborate with other groups, in particular with those in the <a href="http://gmcnet.webs.ull.es/">Geometry, Mechanics and Control Network</a>.</p>
+
+				<p>My PhD advisors are <a href="https://web.mat.upc.edu/narciso.roman/" target="_blank">Narciso Román-Roy</a> and <a href="https://web.mat.upc.edu/xavier.gracia/" target="_blank">Xavier Gràcia Sabaté</a>.</p>
+
+				<h5>List of publications:</h5>
+				<ul class="ms-4">
+					<li>X. Gràcia, X. Rivas and N. Román-Roy<br>"Skinner&ndash;Rusk formalism for <em>k</em>-contact systems"<br>
+					<a href="https://arxiv.org/abs/2109.07257" target="_blank">arXiv:2109.07257</a></li>
+
+					<li>M. de León, J. Gaset, M. Lainz-Valcázar, X. Rivas and N. Román-Roy<br>"Unified Lagrangian-Hamiltonian formalism for contact systems"<br>
+					<em>Fortschritte der Phys.</em> <strong>68</strong> (8):2000045, 2020.<br>
+					<a href="https://arxiv.org/abs/2003.13037" target="_blank">arXiv:2003.13037</a> doi: <a href="https://doi.org/10.1002/prop.202000045" target="_blank">10.1002/prop.202000045</a></li>
+
+					<li>J. Gaset, X. Gràcia, M. C. Muñoz-Lecanda, X. Rivas and N. Román-Roy<br>
+					"A <em>k</em>-contact Lagrangian formalism for field theories with dissipation"<br>
+					<em>Rep. Math. Phys.</em>, <strong>87</strong> (3):347-368, 2021.<br>
+					<a href="https://arxiv.org/abs/2002.10458" target="_blank">arXiv:2002.10458</a> doi: <a href="https://doi.org/10.1016/S0034-4877(21)00041-0" target="_blank">10.1016/S0034-4877(21)00041-0</a></li>
+
+					<li>J. Gaset, X. Gràcia, M. C. Muñoz-Lecanda, X. Rivas and N. Román-Roy<br>
+					"New contributions to the Hamiltonian and Lagrangian contact formalisms for dissipative mechanical systems and their symmetries"<br>
+					<em>Int. J. Geom. Methods Mod. Phys.</em>, <strong>17</strong> (6):2050090, 2020.<br>
+					<a href="https://arxiv.org/abs/1907.02947" target="_blank">arXiv:1907.02947</a>, doi: <a href="https://doi.org/10.1142/S0219887820500905" target="_blank">10.1142/S0219887820500905</a></li>
+
+					<li>J. Gaset, X. Gràcia, M. C. Muñoz-Lecanda, X. Rivas and N. Román-Roy<br>
+					"A contact geometry framework for field theories with dissipation"<br>
+					<em>Ann. Phys.</em>, <strong>414</strong>:168090, 2020.<br>
+					<a href="https://arxiv.org/abs/1905.07354" target="_blank">arXiv:1905.07354</a>, doi: <a href="https://doi.org/10.1016/j.aop.2020.168092" target="_blank">10.1016/j.aop.2020.168092</a></li>
+
+					<li>X. Gràcia, X. Rivas and N. Román-Roy<br>
+					"Constraint algorithm for singular field theories in the <em>k</em>-cosymplectic framework"<br>
+					<em>J. Geom. Mech.</em>, <strong>12</strong> (1):1-23, 2020.<br>
+					<a href="https://arxiv.org/abs/1812.08487" target="_blank">arXiv:1812.08487</a>, doi: <a href="https://doi.org/10.3934/jgm.2020002" target="_blank">10.3934/jgm.2020002</a></li>
+				</ul>
+			</div>
+
+			<hr class="hr-blue my-4">
+
+			<div class="row">
+				<h2 class="blue">&#9632; Teaching</h2>
+				<h5>Varietats diferenciables. Grau en Matemàtiques:</h5>
+				<p>Aula 003 de la Facultat de Matemàtiques i Estadística. <a href="https://fme.upc.edu/ca" target="_blank">FME</a>.<br>
+				Horari: Dilluns de 10:00 a 11:00<br>
+				<a href="docs/guies_docents/vardif.pdf" target="_blank">Guia docent</a>. <a href="https://web.mat.upc.edu/xavier.gracia/vardif/" target="_blank">Més informació</a>.</p>
+				<h5>Càlcul. Grau en Geoinformació i Geomàtica:</h5>
+				<p>Escola Politècnica Superior d'Edificació de Barcelona. <a href="https://epseb.upc.edu/ca" target="_blank">EPSEB</a>.<br>
+				<a href="docs/guies_docents/calcul-epseb.pdf" target="_blank">Guia docent</a>.</p>
+				<h5>Fonaments matemàtics. Grau en Arquitectura Tècnica i Edificació:</h5>
+				<p>Aula 0.8 de l'Escola Politècnica Superior d'Edificació de Barcelona. <a href="https://epseb.upc.edu/ca" target="_blank">EPSEB</a>.<br>
+				Horari: Dimarts de 10:00 a 12:00 i Divendres de 08:00 a 10:00<br>
+				<a href="docs/guies_docents/fonaments-matematics.pdf" target="_blank">Guia docent</a>.</p>
+
+				<h4>Old courses</h4>
+				<ul class="ms-4">
+					<li><a href="docs/guies_docents/informatica.pdf" target="_blank">Informàtica</a>. Graus en Enginyeria, àmbits industrial i TIC. EPSEVG, UPC.</li>
+					<li><a href="docs/guies_docents/algebra-geometria.pdf" target="_blank">Àlgebra i geometria</a>. Grau en Enginyeria de Sistemes Aeroespacials. EETAC, UPC.</li>
+					<li><a href="docs/guies_docents/algebra-lineal-aplicacions.pdf" target="_blank">Àlgebra lineal i aplicacions</a>. Grau en Enginyeria de Sistemes de Telecomunicació. EETAC, UPC.</li>
+					<li><a href="docs/guies_docents/calcul1-fme.pdf" target="_blank">Càlcul en una variable</a>. Grau en Matemàtiques. FME, UPC.</li>
+					<li><a href="docs/guies_docents/calcul-eebe.pdf" target="_blank">Càlcul</a>. Graus en Enginyeria. EEBE, UPC.</li>
 				</ul>
 			</div>
 		</div>
-	</nav>
--->
 
-<div class="jumbotron header">
-	<div class="container">
-		<h1 class="main-title"><strong>XVI Young Researchers Workshop in Geometry, Mechanics and Control</strong></h1>
-	</div>
-</div>
-<div class="container">
-	<p class="lead">The 16th Young Researchers Workshop in Geometry, Mechanics, and Control is a yearly event to promote young researchers in the field of <strong>differential geometry</strong> and its relations to <strong>mechanics and control theory</strong>. The 16th edition will take place in <strong>Barcelona</strong>. This event offers researchers in the field, especially to the younger participants, a platform to share their latest results to an international audience and discuss current topics. The workshop will contain three mini-courses in key topics in the field, selected talks proposed by the participants and a poster session.</p>
+		<footer class="container-fluid footer mt-5"></footer>
 
-	<h3>Location and dates:</h3>
-	<ul>
-		<li><strong>Where:</strong> Barcelona, Catalonia, Spain</li>
-		<li><strong>When:</strong> December 1-3, 2021</li>
-		<li><strong>How:</strong> Registration opens in March</li>
-		<li><strong>Other questions?</strong> Contact us at <a href = "mailto: 16ywgmc@gmail.com">16ywgmc(at)gmail.com</a></li>
-	</ul>
-	
-	<h3>Courses:</h3>
-	<ul>
-		<li><strong>Generalized geometry and complex Dirac structures</strong> by Roberto Rubio (Universitat de Barcelona).</li>
-		<li><strong>An introduction to Information Geometry: Dynamics on Statistical Manifolds</strong> by Luigi Malagó (Romanian Institute of Science and Technology – RIST).</li>
-		<li><strong>Graph-based optimal control with application to autonomous driving</strong> by Kathrin Flaßkamp (Universität des Saarlandes).</li>
-	</ul>
+		<!-- Option 1: Bootstrap Bundle with Popper -->
+		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
 
-	<h3>Organization comitee:</h3>
-	<ul>
-		<li>Jordi Gaset (Universitat Autònoma de Barcelona) jordi.gaset(at)uab.cat</li>
-		<li>Cédric Oms (Universitat Politècnica de Catalunya) cedric.oms(at)upc.edu</li>
-		<li>Xavier Rivas (Universitat Politècnica de Catalunya) xavier.rivas(at)upc.edu</li>
-	</ul>
-	
-	<h3>Scientific comitee:</h3>
-	<ul>
-		<li dir="ltr"> <a href="http://dma.aq.upm.es/profesor/barbero_m/" target="_blank" rel="noopener noreferrer">María Barbero</a> (Universidad Politécnica de Madrid, Spain)</li>
-		<li dir="ltr"> Cédric M. Campos (Universidad Rey Juan Carlos, Spain)</li>
-		<li dir="ltr"> <a href="https://www.uni-math.gwdg.de/mjotz/home.html" target="_blank" rel="noopener noreferrer">Madeleine Jotz Lean</a> (Georg-August Universität Göttingen, Germany)</li>
-		<li dir="ltr"> <a href="http://www.lmd.ens.fr/gay-balmaz/Home.html" target="_blank" rel="noopener noreferrer">François Gay-Balmaz</a> (CNRS, École Normale Supérieure, France)</li>
-		<li dir="ltr"> <a href="https://mast.queensu.ca/~bahman/" target="_blank" rel="noopener noreferrer">Bahman Gharesifard</a> (Queen&#8217;s University, Canada)</li>
-		<li dir="ltr"> <a href="https://smp.uq.edu.au/profile/5992/ramiro-lafuente" target="_blank" rel="noopener noreferrer">Ramiro Lafuente </a> (The University of Queensland, Australia)</li>
-		<li dir="ltr"> <a href="http://scala.uc3m.es/juanmargalef/" target="_blank" rel="noopener noreferrer">Juan Margalef </a> (Penn State&#8217;s University, USA)</li>
-		<li dir="ltr"> <a href="https://www.ltd.tf.fau.de/person/rodrigo-takuro-sato-martin-de-almagro/" target="_blank" rel="noopener noreferrer">Rodrigo T. Sato Martín de Almagro </a> (Friedrich-Alexander-Universität Erlangen-Nürnberg, Germany)</li>
-	</ul>
-
-	<h3>Previous editions</h3>
-	<ul>
-		<li dir="ltr"> <a href="http://utrechtgeometrycentre.nl/15iyrw/" target="_blank" rel="noopener noreferrer"> XV edition </a></li>
-		<li dir="ltr"> <a href="https://www.uni-goettingen.de/de/14th+international+young+researchers+workshop+on+geometry%2C+mechanics+and+control/607463.html" target="_blank" rel="noopener noreferrer"> XIV edition </a></li>
-		<li dir="ltr"><a href="https://www.uni-goettingen.de/de/14th+international+young+researchers+workshop+on+geometry%2C+mechanics+and+control/607463.html" target="_blank" rel="noopener noreferrer"> </a><a href="https://www.uc.pt/en/congressos/13yrw" target="_blank" rel="noopener noreferrer"> XIII edition </a></li>
-		<li dir="ltr"><a href="https://www.uc.pt/en/congressos/13yrw" target="_blank" rel="noopener noreferrer"> </a><a href="https://events.math.unipd.it/12YRW/" target="_blank" rel="noopener noreferrer"> XII edition </a></li>
-		<li dir="ltr"><a href="https://events.math.unipd.it/12YRW/" target="_blank" rel="noopener noreferrer"> </a><a href="https://www.ull.es/portal/agenda/tag/geometry/" target="_blank" rel="noopener noreferrer"> XI edition </a></li>
-		<li dir="ltr"><a href="https://www.ull.es/portal/agenda/tag/geometry/" target="_blank" rel="noopener noreferrer"> </a><a href="https://team.inria.fr/mctao/10th-international-young-researcher-workshop-on-geometry-mechanics-and-control-january-13-15-2016/" target="_blank" rel="noopener noreferrer"> X edition </a></li>
-		<li dir="ltr"><a href="https://team.inria.fr/mctao/10th-international-young-researcher-workshop-on-geometry-mechanics-and-control-january-13-15-2016/" target="_blank" rel="noopener noreferrer"> </a><a href="https://iuma.unizar.es/en/node/217" target="_blank" rel="noopener noreferrer"> IX edition </a></li>
-	</ul>
-
-</div>
-
-<div class="container-fluid footer">
-	<div class="container">
-		<h4>Contact information:</h4>
-		<p>16ywgmc(at)gmail.com</p>
-	</div>
-</div>
-
-
-
-<!-- Optional JavaScript; choose one of the two! -->
-
-<!-- Option 1: jQuery and Bootstrap Bundle (includes Popper) -->
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
-
-</body>
+	</body>
 </html>
