--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 						<dt class="col-sm-2">Postal adress</dt>
 						<dd class="col-sm-10">Campus Nord, edifici C3, despatx 102.<br> C. Jordi Girona, 1. 08034 Barcelona, Catalunya.</dd>
 						<dt class="col-sm-2">e-mail</dt>
-						<dd class="col-sm-10">xavier.rivas(at)upc.edu</dd>
+						<dd class="col-sm-10">xavier.rivas(at)upc.edu<br>xavier.rivas(at)unir.net</dd>
 						<dt class="col-sm-2">web page</dt>
 						<dd class="col-sm-10"><a href="https://web.mat.upc.edu/xavier.rivas/">web.mat.upc.edu/xavier.rivas</a><br>
 						<a href="http://xavirivas.com">xavirivas.com</a></dd>
