--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
 				</div>
 				<div class="col-9">
 					<h1 class="h1 blue name">Xavier Rivas</h1>
-					<p class='lead'>Departament de Matemàtiques, Universitat Politècnica de Catalunya</p>
+					<p class='lead'>Escuela Superior en Ingeniería y Tecnología, Universidad Internacional de La Rioja</p>
 					<dl class="row">
-						<dt class="col-sm-2">Postal adress</dt>
-						<dd class="col-sm-10">Campus Nord, edifici C3, despatx 102.<br> C. Jordi Girona, 1. 08034 Barcelona, Catalunya.</dd>
+						<!-- <dt class="col-sm-2">Postal adress</dt>
+						<dd class="col-sm-10">Campus Nord, edifici C3, despatx 102.<br> C. Jordi Girona, 1. 08034 Barcelona, Catalunya.</dd> -->
 						<dt class="col-sm-2">e-mail</dt>
 						<dd class="col-sm-10">xavier.rivas(at)upc.edu<br>xavier.rivas(at)unir.net</dd>
 						<dt class="col-sm-2">web page</dt>
