--- a/index.html
+++ b/index.html
@@ -66,6 +66,10 @@
 
 				<h5>List of publications:</h5>
 				<ul class="ms-4">
+					<li>J. de Lucas, X. Gràcia, X. Rivas, N. Román-Roy and S. Vilariño<br>"Reduction and reconstruction of multisymplectic Lie systems"<br>
+					<em>Preprint</em>.<br>
+					<a href="https://arxiv.org/abs/2202.13748" target="_blank">arXiv:2202.13748</a></li>
+
 					<li>X. Gràcia, X. Rivas and N. Román-Roy<br>"Skinner&ndash;Rusk formalism for <em>k</em>-contact systems"<br>
 					<em>J. Geom. Phys.</em> <strong>172</strong>:104429, 2022.<br>
 					<a href="https://arxiv.org/abs/2109.07257" target="_blank">arXiv:2109.07257</a> doi: <a href="https://doi.org/10.1016/j.geomphys.2021.104429" target="_blank">10.1016/j.geomphys.2021.104429</a></li>
