--- a/index.html
+++ b/index.html
@@ -104,23 +104,13 @@
 			<div class="row">
 				<h2 class="blue">&#9632; Teaching</h2>
 				
-				<!-- <h5>Varietats diferenciables. Grau en Matemàtiques:</h5>
-				<p>Aula 003 de la Facultat de Matemàtiques i Estadística. <a href="https://fme.upc.edu/ca" target="_blank">FME</a>.<br>
-				Horari: Dilluns de 10:00 a 11:00<br>
-				<a href="docs/guies_docents/vardif.pdf" target="_blank">Guia docent</a>. <a href="https://web.mat.upc.edu/xavier.gracia/vardif/" target="_blank">Més informació</a>.</p>
-				
-				<h5>Càlcul. Grau en Geoinformació i Geomàtica:</h5>
-				<p>Escola Politècnica Superior d'Edificació de Barcelona. <a href="https://epseb.upc.edu/ca" target="_blank">EPSEB</a>.<br>
-				<a href="docs/guies_docents/calcul-epseb.pdf" target="_blank">Guia docent</a>.</p>
-
-				<h5>Fonaments matemàtics. Grau en Arquitectura Tècnica i Edificació:</h5>
-				<p>Aula 0.8 de l'Escola Politècnica Superior d'Edificació de Barcelona. <a href="https://epseb.upc.edu/ca" target="_blank">EPSEB</a>.<br>
-				Horari: Dimarts de 10:00 a 12:00 i Divendres de 08:00 a 10:00<br>
-				<a href="docs/guies_docents/fonaments-matematics.pdf" target="_blank">Guia docent</a>.</p> -->
+				<h5>Geometría Diferencial Aplicada. Máster Universitario en Ingeniería Matemática y Computación:</h5>
+				<p>Universidad Internacional de La Rioja. <a href="https://www.unir.net/" target="_blank">UNIR</a>.<br>
+				<li><a href="docs/guies_docents/gda-prog.pdf" target="_blank">Programación</a>.</p>
 
 				<h4>Old courses</h4>
 				<ul class="ms-4">
-					<li><a href="https://static.unir.net/guias_espana/guias_nuevas/gmc23_calculo_varias_variables.htm" target="_blank">Cálculo en varias variables</a>. Grado en Matemática Computacional. Escuela Superior en Ingeniería y Tecnología, UNIR.</li>
+					<li><a href="docs/guies_docents/cvv-UNIR.pdf" target="_blank">Cálculo en varias variables</a>. Grado en Matemática Computacional. Escuela Superior en Ingeniería y Tecnología, UNIR.</li>
 					<li><a href="docs/guies_docents/vardif.pdf" target="_blank">Varietats diferenciables</a>. Grau en Matemàtiques. FME, UPC.</li>
 					<li><a href="docs/guies_docents/calcul-epseb.pdf" target="_blank">Càlcul</a>. Grau en Geoinformació i Geomàtica. EPSEB, UPC.</li>
 					<li><a href="docs/guies_docents/fonaments-matematics.pdf" target="_blank">Fonaments matemàtics</a>. Grau en Arquitectura Tècnica i Edificació. EPSEB, UPC.</li>
