--- a/index.html
+++ b/index.html
@@ -105,8 +105,7 @@
 				<h2 class="blue">&#9632; Teaching</h2>
 				
 				<h5>Geometría Diferencial Aplicada. Máster Universitario en Ingeniería Matemática y Computación:</h5>
-				<p>Universidad Internacional de La Rioja. <a href="https://www.unir.net/" target="_blank">UNIR</a>.<br>
-				<li><a href="docs/guies_docents/gda-prog.pdf" target="_blank">Programación</a>.</p>
+				<p>Universidad Internacional de La Rioja. <a href="https://www.unir.net/" target="_blank">UNIR</a>. <a href="docs/guies_docents/gda-prog.pdf" target="_blank">Programación</a>.</p>
 
 				<h4>Old courses</h4>
 				<ul class="ms-4">
