--- a/index.html
+++ b/index.html
@@ -66,6 +66,9 @@
 
 				<h5>List of publications:</h5>
 				<ul class="ms-4">
+					<li>M. de León, J. Gaset, X. Gràcia, X. Rivas, M. C. Muñoz-Lecanda<br>"Time-dependent contact mechanics"<br>
+					<em>Preprint.</em> <a href="https://arxiv.org/abs/2205.09454" target="_blank">arXiv:2205.09454</a></li>
+
 					<li>J. de Lucas, X. Gràcia, X. Rivas, N. Román-Roy and S. Vilariño<br>"Reduction and reconstruction of multisymplectic Lie systems"<br>
 					<em>Preprint.</em> <a href="https://arxiv.org/abs/2202.13748" target="_blank">arXiv:2202.13748</a></li>
 
