--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 				<p>My PhD advisors were <a href="https://web.mat.upc.edu/narciso.roman/" target="_blank">Narciso Román-Roy</a> and <a href="https://web.mat.upc.edu/xavier.gracia/" target="_blank">Xavier Gràcia Sabaté</a>. You can find my thesis <a href = "docs/PhD.pdf">here</a>.</p>
 
 				<h5>List of publications:</h5>
-				<ul class="ms-4">
+				<ol class="ms-4">
 					<li>X. Rivas and D. Torres<br>"Lagrangian&ndash;Hamiltonian for time-dependent mechanical systems"<br>
 					<em>Preprint.</em> <a href="https://arxiv.org/abs/2205.14757" target="_blank">arXiv:2205.14757</a></li>
 
@@ -101,7 +101,7 @@
 					"Constraint algorithm for singular field theories in the <em>k</em>-cosymplectic framework"<br>
 					<em>J. Geom. Mech.</em>, <strong>12</strong> (1):1-23, 2020.<br>
 					<a href="https://arxiv.org/abs/1812.08487" target="_blank">arXiv:1812.08487</a>, doi: <a href="https://doi.org/10.3934/jgm.2020002" target="_blank">10.3934/jgm.2020002</a></li>
-				</ul>
+				</ol>
 			</div>
 
 			<hr class="hr-blue my-4">
