--- a/index.html
+++ b/index.html
@@ -48,7 +48,9 @@
 						<dd class="col-sm-10"><a href="https://arxiv.org/a/rivas_x_1.html" target="_blank">arxiv.org</a><br>
 						<a href="https://www.researchgate.net/profile/Xavier-Rivas-2" target="_blank">ResearchGate</a><br>
 						<a href="https://scholar.google.es/citations?user=MyVZoPMAAAAJ" target="_blank">Google Scholar</a><br>
-						<a href="https://publons.com/researcher/4705307/xavier-rivas/" target="_blank">ResearcherID</a></dd>
+						<a href="https://publons.com/researcher/4705307/xavier-rivas/" target="_blank">ResearcherID</a><br>
+						<a href="https://mathscinet.ams.org/mathscinet/MRAuthorID/1375865" target="_blank">MathSciNet</a><br>
+						<a href="https://www.zotero.org/xrivas" target="_blank">Zotero</a></dd>
 					</dl>
 					
 				</div>
@@ -65,7 +67,7 @@
 
 				<h5>List of publications:</h5>
 				<ol class="ms-4">
-					<li>X. Rivas and D. Torres<br>"Lagrangian&ndash;Hamiltonian for time-dependent mechanical systems"<br>
+					<li>X. Rivas and D. Torres<br>"Lagrangian&ndash;Hamiltonian formalism for time-dependent dissipative mechanical systems"<br>
 					<em>Preprint.</em> <a href="https://arxiv.org/abs/2205.14757" target="_blank">arXiv:2205.14757</a></li>
 
 					<li>M. de León, J. Gaset, X. Gràcia, M. C. Muñoz-Lecanda and X. Rivas<br>"Time-dependent contact mechanics"<br>
@@ -102,6 +104,20 @@
 					<em>J. Geom. Mech.</em>, <strong>12</strong> (1):1-23, 2020.<br>
 					<a href="https://arxiv.org/abs/1812.08487" target="_blank">arXiv:1812.08487</a>, doi: <a href="https://doi.org/10.3934/jgm.2020002" target="_blank">10.3934/jgm.2020002</a></li>
 				</ol>
+
+				<h5>Collaborators:</h5>
+				<p>Some of the colleagues I have collaborated with are:</p>
+				<ul class="ms-4">
+					<li>Manuel de León</li>
+					<li><a href="https://www.fuw.edu.pl/~delucas/" target="_blank">Javier de Lucas</a></li>
+					<li><a href="https://www.unir.net/profesores/jordi-gaset-rifa/" target="_blank">Jordi Gaset</a></li>
+					<li><a href="https://web.mat.upc.edu/xavier.gracia/" target="_blank">Xavier Gràcia</a></li>
+					<li><a href="http://mlainz.gitlab.io/" target="_blank">Manuel Lainz</a></li>
+					<li><a href="https://alopezgordon.xyz/" target="_blank">Asier López-Gordón</a></li>
+					<li>Miguel C. Muñoz-Lecanda</li>
+					<li><a href="https://web.mat.upc.edu/narciso.roman/" target="_blank">Narciso Román-Roy</a></li>
+					<li><a href="http://cud.unizar.es/svilariño" target="_blank">Silvia Vilariño</a></li>
+				</ul>
 			</div>
 
 			<hr class="hr-blue my-4">
