--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 				<h5>Collaborators:</h5>
 				<p>Some of the colleagues I have collaborated with are:</p>
 				<ul class="ms-4">
-					<li>Manuel de León</li>
+					<li><a href="https://www.icmat.es/mdeleon" target="_blank">Manuel de León</a></li>
 					<li><a href="https://www.fuw.edu.pl/~delucas/" target="_blank">Javier de Lucas</a></li>
 					<li><a href="https://www.unir.net/profesores/jordi-gaset-rifa/" target="_blank">Jordi Gaset</a></li>
 					<li><a href="https://web.mat.upc.edu/xavier.gracia/" target="_blank">Xavier Gràcia</a></li>
