--- a/index.html
+++ b/index.html
@@ -74,7 +74,8 @@
 					<em>Preprint.</em> <a href="https://arxiv.org/abs/2205.09454" target="_blank">arXiv:2205.09454</a></li>
 
 					<li>J. de Lucas, X. Gràcia, X. Rivas, N. Román-Roy and S. Vilariño<br>"Reduction and reconstruction of multisymplectic Lie systems"<br>
-					<em>Preprint.</em> <a href="https://arxiv.org/abs/2202.13748" target="_blank">arXiv:2202.13748</a></li>
+					<em>J. Phys. A: Math. Theor.</em> (to appear)<br>
+					<a href="https://arxiv.org/abs/2202.13748" target="_blank">arXiv:2202.13748</a> doi: <a href="http://dx.doi.org/10.1088/1751-8121/ac78ab" target="_blank">10.1088/1751-8121/ac78ab</a></li>
 
 					<li>X. Gràcia, X. Rivas and N. Román-Roy<br>"Skinner&ndash;Rusk formalism for <em>k</em>-contact systems"<br>
 					<em>J. Geom. Phys.</em> <strong>172</strong>:104429, 2022.<br>
