--- a/index.html
+++ b/index.html
@@ -67,6 +67,10 @@
 
 				<h5>List of publications:</h5>
 				<ol class="ms-4">
+
+					<li>J. de Lucas and X. Rivas<br>"Contact Lie systems"<br>
+					<em>Preprint.</em> <a href="https://arxiv.org/abs/2207.04038" target="_blank">arXiv:2207.04038</a></li>
+
 					<li>X. Rivas and D. Torres<br>"Lagrangian&ndash;Hamiltonian formalism for time-dependent dissipative mechanical systems"<br>
 					<em>Preprint.</em> <a href="https://arxiv.org/abs/2205.14757" target="_blank">arXiv:2205.14757</a></li>
 
