--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 					<em>Preprint.</em> <a href="https://arxiv.org/abs/2207.04038" target="_blank">arXiv:2207.04038</a></li>
 
 					<li class='mb-2'>X. Rivas and D. Torres, "Lagrangian&ndash;Hamiltonian formalism for time-dependent dissipative mechanical systems"<br>
-					<em>Preprint.</em> <a href="https://arxiv.org/abs/2205.14757" target="_blank">arXiv:2205.14757</a></li>
+					<em>J. Geom. Mech.</em>(to appear) <a href="https://arxiv.org/abs/2205.14757" target="_blank">arXiv:2205.14757</a></li>
 
 					<li class='mb-2'>M. de León, J. Gaset, X. Gràcia, M. C. Muñoz-Lecanda and X. Rivas, "Time-dependent contact mechanics"<br>
 					<em>Monatsh. Math.</em>(to appear) <a href="https://arxiv.org/abs/2205.09454" target="_blank">arXiv:2205.09454</a></li>
