--- a/index.html
+++ b/index.html
@@ -110,6 +110,7 @@
 					<li><a href="https://alopezgordon.xyz/" target="_blank">Asier López-Gordón</a></li>
 					<li>Miguel C. Muñoz-Lecanda</li>
 					<li><a href="https://web.mat.upc.edu/narciso.roman/" target="_blank">Narciso Román-Roy</a></li>
+					<li>Daniel Torres</li>
 					<li><a href="http://cud.unizar.es/svilariño" target="_blank">Silvia Vilariño</a></li>
 				</ul>
 			</div>
