--- a/index.html
+++ b/index.html
@@ -123,12 +123,15 @@
 			<div class="row">
 				<h2 class="blue">&#9632; Teaching</h2>
 				
-				<h5>Geometría Diferencial Aplicada. Máster Universitario en Ingeniería Matemática y Computación:</h5>
-				<p>Universidad Internacional de La Rioja. <a href="https://www.unir.net/" target="_blank">UNIR</a>. <a href="docs/guies_docents/gda-prog.pdf" target="_blank">Programación</a>.</p>
+				<h5>Cálculo en varias variables. Grado en Matemática Computacional</h5>
+				<p>Universidad Internacional de La Rioja. <a href="https://www.unir.net/" target="_blank">UNIR</a>. <a href="docs/guies_docents/cvv-UNIR.pdf" target="_blank">Programación</a>.</p>
+				
+				<h5>Análisis complejo. Grado en Matemática Computacional</h5>
+				<p>Universidad Internacional de La Rioja. <a href="https://www.unir.net/" target="_blank">UNIR</a>.</p>
 
 				<h4>Old courses</h4>
 				<ul class="ms-4">
-					<li><a href="docs/guies_docents/cvv-UNIR.pdf" target="_blank">Cálculo en varias variables</a>. Grado en Matemática Computacional. Escuela Superior en Ingeniería y Tecnología, UNIR.</li>
+					<li><a href="docs/guies_docents/gda-prog.pdf" target="_blank">Geometría Diferencial Aplicada</a>. Máster Universitario en Ingeniería Matemática y Computación. Escuela Superior en Ingeniería y Tecnología, UNIR.</li>
 					<li><a href="docs/guies_docents/vardif.pdf" target="_blank">Varietats diferenciables</a>. Grau en Matemàtiques. FME, UPC.</li>
 					<li><a href="docs/guies_docents/calcul-epseb.pdf" target="_blank">Càlcul</a>. Grau en Geoinformació i Geomàtica. EPSEB, UPC.</li>
 					<li><a href="docs/guies_docents/fonaments-matematics.pdf" target="_blank">Fonaments matemàtics</a>. Grau en Arquitectura Tècnica i Edificació. EPSEB, UPC.</li>
