--- a/index.html
+++ b/index.html
@@ -68,38 +68,27 @@
 				<h5>List of publications:</h5>
 				<ol class="ms-4">
 
-					<li class='mb-2'>M. de León, M. Lainz, A. López-Gordón and X. Rivas, "Hamilton&ndash;Jacobi theory for contact systems: autonomous and non-autonomous"<br>
-					<em>Preprint.</em> <a href="https://arxiv.org/abs/2208.07436" target="_blank">arXiv:2208.07436</a></li>
+					<li class='mb-2'>M. de León, M. Lainz, A. López-Gordón and X. Rivas, "Hamilton&ndash;Jacobi theory for contact systems: autonomous and non-autonomous". <em>Preprint.</em> <a href="https://arxiv.org/abs/2208.07436" target="_blank">arXiv:2208.07436</a></li>
 
-					<li class='mb-2'>J. de Lucas and X. Rivas, "Contact Lie systems"<br>
-					<em>Preprint.</em> <a href="https://arxiv.org/abs/2207.04038" target="_blank">arXiv:2207.04038</a></li>
+					<li class='mb-2'>J. de Lucas and X. Rivas, "Contact Lie systems". <em>Preprint.</em> <a href="https://arxiv.org/abs/2207.04038" target="_blank">arXiv:2207.04038</a></li>
 
-					<li class='mb-2'>X. Rivas and D. Torres, "Lagrangian&ndash;Hamiltonian formalism for time-dependent dissipative mechanical systems"<br>
-					<em>J. Geom. Mech.</em>(to appear) <a href="https://arxiv.org/abs/2205.14757" target="_blank">arXiv:2205.14757</a></li>
+					<li class='mb-2'>X. Rivas and D. Torres, "Lagrangian&ndash;Hamiltonian formalism for time-dependent dissipative mechanical systems". <em>J. Geom. Mech.</em>(to appear) <a href="https://arxiv.org/abs/2205.14757" target="_blank">arXiv:2205.14757</a></li>
 
-					<li class='mb-2'>M. de León, J. Gaset, X. Gràcia, M. C. Muñoz-Lecanda and X. Rivas, "Time-dependent contact mechanics"<br>
-					<em>Monatsh. Math.</em>(to appear) <a href="https://arxiv.org/abs/2205.09454" target="_blank">arXiv:2205.09454</a></li>
+					<li class='mb-2'>M. de León, J. Gaset, X. Gràcia, M. C. Muñoz-Lecanda and X. Rivas, "Time-dependent contact mechanics". <em>Monatsh. Math.</em>(to appear) <a href="https://arxiv.org/abs/2205.09454" target="_blank">arXiv:2205.09454</a></li>
 
-					<li class='mb-2'>J. de Lucas, X. Gràcia, X. Rivas, N. Román-Roy and S. Vilariño, "Reduction and reconstruction of multisymplectic Lie systems"<br>
-					<em>J. Phys. A: Math. Theor.</em> <strong>55</strong>(29):295204, 2022. <a href="https://arxiv.org/abs/2202.13748" target="_blank">arXiv:2202.13748</a> doi: <a href="http://dx.doi.org/10.1088/1751-8121/ac78ab" target="_blank">10.1088/1751-8121/ac78ab</a></li>
+					<li class='mb-2'>J. de Lucas, X. Gràcia, X. Rivas, N. Román-Roy and S. Vilariño, "Reduction and reconstruction of multisymplectic Lie systems". <em>J. Phys. A: Math. Theor.</em> <strong>55</strong>(29):295204, 2022. <a href="https://arxiv.org/abs/2202.13748" target="_blank">arXiv:2202.13748</a> doi: <a href="http://dx.doi.org/10.1088/1751-8121/ac78ab" target="_blank">10.1088/1751-8121/ac78ab</a></li>
 
-					<li class='mb-2'>X. Gràcia, X. Rivas and N. Román-Roy, "Skinner&ndash;Rusk formalism for <em>k</em>-contact systems"<br>
-					<em>J. Geom. Phys.</em> <strong>172</strong>:104429, 2022. <a href="https://arxiv.org/abs/2109.07257" target="_blank">arXiv:2109.07257</a> doi: <a href="https://doi.org/10.1016/j.geomphys.2021.104429" target="_blank">10.1016/j.geomphys.2021.104429</a></li>
+					<li class='mb-2'>X. Gràcia, X. Rivas and N. Román-Roy, "Skinner&ndash;Rusk formalism for <em>k</em>-contact systems". <em>J. Geom. Phys.</em> <strong>172</strong>:104429, 2022. <a href="https://arxiv.org/abs/2109.07257" target="_blank">arXiv:2109.07257</a> doi: <a href="https://doi.org/10.1016/j.geomphys.2021.104429" target="_blank">10.1016/j.geomphys.2021.104429</a></li>
 
-					<li class='mb-2'>M. de León, J. Gaset, M. Lainz-Valcázar, X. Rivas and N. Román-Roy, "Unified Lagrangian-Hamiltonian formalism for contact systems"<br>
-					<em>Fortschritte der Phys.</em> <strong>68</strong> (8):2000045, 2020. <a href="https://arxiv.org/abs/2003.13037" target="_blank">arXiv:2003.13037</a> doi: <a href="https://doi.org/10.1002/prop.202000045" target="_blank">10.1002/prop.202000045</a></li>
+					<li class='mb-2'>M. de León, J. Gaset, M. Lainz-Valcázar, X. Rivas and N. Román-Roy, "Unified Lagrangian-Hamiltonian formalism for contact systems". <em>Fortschritte der Phys.</em> <strong>68</strong> (8):2000045, 2020. <a href="https://arxiv.org/abs/2003.13037" target="_blank">arXiv:2003.13037</a> doi: <a href="https://doi.org/10.1002/prop.202000045" target="_blank">10.1002/prop.202000045</a></li>
 
-					<li class='mb-2'>J. Gaset, X. Gràcia, M. C. Muñoz-Lecanda, X. Rivas and N. Román-Roy, "A <em>k</em>-contact Lagrangian formalism for field theories with dissipation"<br>
-					<em>Rep. Math. Phys.</em>, <strong>87</strong> (3):347-368, 2021. <a href="https://arxiv.org/abs/2002.10458" target="_blank">arXiv:2002.10458</a> doi: <a href="https://doi.org/10.1016/S0034-4877(21)00041-0" target="_blank">10.1016/S0034-4877(21)00041-0</a></li>
+					<li class='mb-2'>J. Gaset, X. Gràcia, M. C. Muñoz-Lecanda, X. Rivas and N. Román-Roy, "A <em>k</em>-contact Lagrangian formalism for field theories with dissipation". <em>Rep. Math. Phys.</em>, <strong>87</strong> (3):347-368, 2021. <a href="https://arxiv.org/abs/2002.10458" target="_blank">arXiv:2002.10458</a> doi: <a href="https://doi.org/10.1016/S0034-4877(21)00041-0" target="_blank">10.1016/S0034-4877(21)00041-0</a></li>
 
-					<li class='mb-2'>J. Gaset, X. Gràcia, M. C. Muñoz-Lecanda, X. Rivas and N. Román-Roy, "New contributions to the Hamiltonian and Lagrangian contact formalisms for dissipative mechanical systems and their symmetries"<br>
-					<em>Int. J. Geom. Methods Mod. Phys.</em>, <strong>17</strong> (6):2050090, 2020. <a href="https://arxiv.org/abs/1907.02947" target="_blank">arXiv:1907.02947</a>, doi: <a href="https://doi.org/10.1142/S0219887820500905" target="_blank">10.1142/S0219887820500905</a></li>
+					<li class='mb-2'>J. Gaset, X. Gràcia, M. C. Muñoz-Lecanda, X. Rivas and N. Román-Roy, "New contributions to the Hamiltonian and Lagrangian contact formalisms for dissipative mechanical systems and their symmetries". <em>Int. J. Geom. Methods Mod. Phys.</em>, <strong>17</strong> (6):2050090, 2020. <a href="https://arxiv.org/abs/1907.02947" target="_blank">arXiv:1907.02947</a>, doi: <a href="https://doi.org/10.1142/S0219887820500905" target="_blank">10.1142/S0219887820500905</a></li>
 
-					<li class='mb-2'>J. Gaset, X. Gràcia, M. C. Muñoz-Lecanda, X. Rivas and N. Román-Roy, "A contact geometry framework for field theories with dissipation"<br>
-					<em>Ann. Phys.</em>, <strong>414</strong>:168090, 2020. <a href="https://arxiv.org/abs/1905.07354" target="_blank">arXiv:1905.07354</a>, doi: <a href="https://doi.org/10.1016/j.aop.2020.168092" target="_blank">10.1016/j.aop.2020.168092</a></li>
+					<li class='mb-2'>J. Gaset, X. Gràcia, M. C. Muñoz-Lecanda, X. Rivas and N. Román-Roy, "A contact geometry framework for field theories with dissipation". <em>Ann. Phys.</em>, <strong>414</strong>:168090, 2020. <a href="https://arxiv.org/abs/1905.07354" target="_blank">arXiv:1905.07354</a>, doi: <a href="https://doi.org/10.1016/j.aop.2020.168092" target="_blank">10.1016/j.aop.2020.168092</a></li>
 
-					<li class='mb-2'>X. Gràcia, X. Rivas and N. Román-Roy, "Constraint algorithm for singular field theories in the <em>k</em>-cosymplectic framework"<br>
-					<em>J. Geom. Mech.</em>, <strong>12</strong> (1):1-23, 2020. <a href="https://arxiv.org/abs/1812.08487" target="_blank">arXiv:1812.08487</a>, doi: <a href="https://doi.org/10.3934/jgm.2020002" target="_blank">10.3934/jgm.2020002</a></li>
+					<li class='mb-2'>X. Gràcia, X. Rivas and N. Román-Roy, "Constraint algorithm for singular field theories in the <em>k</em>-cosymplectic framework". <em>J. Geom. Mech.</em>, <strong>12</strong> (1):1-23, 2020. <a href="https://arxiv.org/abs/1812.08487" target="_blank">arXiv:1812.08487</a>, doi: <a href="https://doi.org/10.3934/jgm.2020002" target="_blank">10.3934/jgm.2020002</a></li>
 				</ol>
 
 				<h5>Collaborators:</h5>
@@ -128,6 +117,9 @@
 				
 				<h5>Análisis complejo. Grado en Matemática Computacional</h5>
 				<p>Universidad Internacional de La Rioja. <a href="https://www.unir.net/" target="_blank">UNIR</a>.</p>
+				
+				<h5>Ecuaciones diferenciales. Grado en Física</h5>
+				<p>Universidad Internacional de La Rioja. <a href="https://www.unir.net/" target="_blank">UNIR</a>. <a href="docs/guies_docents/ecuaciones-diferenciales.pdf" target="_blank">Programación</a>.</p>
 
 				<h4>Old courses</h4>
 				<ul class="ms-4">
