--- a/index.html
+++ b/index.html
@@ -68,6 +68,8 @@
 				<h5>List of publications:</h5>
 				<ol class="ms-4">
 
+					<li class='mb-2'>M. de León, J. Gaset, M. C. Muñoz-Lecanda, X. Rivas and N. Román-Roy, "Multicontact formulation for non-conservative field theories". <em>Preprint.</em> <a href="https://arxiv.org/abs/2209.08918" target="_blank">arXiv:2209.08918</a></li>
+					
 					<li class='mb-2'>M. de León, M. Lainz, A. López-Gordón and X. Rivas, "Hamilton&ndash;Jacobi theory for contact systems: autonomous and non-autonomous". <em>Preprint.</em> <a href="https://arxiv.org/abs/2208.07436" target="_blank">arXiv:2208.07436</a></li>
 
 					<li class='mb-2'>J. de Lucas and X. Rivas, "Contact Lie systems". <em>Preprint.</em> <a href="https://arxiv.org/abs/2207.04038" target="_blank">arXiv:2207.04038</a></li>
