--- a/index.html
+++ b/index.html
@@ -74,9 +74,9 @@
 
 					<li class='mb-2'>J. de Lucas and X. Rivas, "Contact Lie systems". <em>Preprint.</em> <a href="https://arxiv.org/abs/2207.04038" target="_blank">arXiv:2207.04038</a></li>
 
-					<li class='mb-2'>X. Rivas and D. Torres, "Lagrangian&ndash;Hamiltonian formalism for time-dependent dissipative mechanical systems". <em>J. Geom. Mech.</em>(to appear) <a href="https://arxiv.org/abs/2205.14757" target="_blank">arXiv:2205.14757</a></li>
+					<li class='mb-2'>X. Rivas and D. Torres, "Lagrangian&ndash;Hamiltonian formalism for time-dependent dissipative mechanical systems". <em>J. Geom. Mech.</em> <strong>15</strong>(1):1-26, 2022. <a href="https://arxiv.org/abs/2205.14757" target="_blank">arXiv:2205.14757</a> doi: <a href="https://doi.org/10.3934/jgm.2023001" target="_blank">10.3934/jgm.2023001</a></li>
 
-					<li class='mb-2'>M. de León, J. Gaset, X. Gràcia, M. C. Muñoz-Lecanda and X. Rivas, "Time-dependent contact mechanics". <em>Monatsh. Math.</em>, 2022. <a href="https://arxiv.org/abs/2205.09454" target="_blank">arXiv:2205.09454</a> doi: <a href="https://doi.org/10.1007/s00605-022-01767-1" target="_blank">10.1007/s00605-022-01767-1</a></li></li>
+					<li class='mb-2'>M. de León, J. Gaset, X. Gràcia, M. C. Muñoz-Lecanda and X. Rivas, "Time-dependent contact mechanics". <em>Monatsh. Math.</em>, 2022. <a href="https://arxiv.org/abs/2205.09454" target="_blank">arXiv:2205.09454</a> doi: <a href="https://doi.org/10.1007/s00605-022-01767-1" target="_blank">10.1007/s00605-022-01767-1</a></li>
 
 					<li class='mb-2'>J. de Lucas, X. Gràcia, X. Rivas, N. Román-Roy and S. Vilariño, "Reduction and reconstruction of multisymplectic Lie systems". <em>J. Phys. A: Math. Theor.</em> <strong>55</strong>(29):295204, 2022. <a href="https://arxiv.org/abs/2202.13748" target="_blank">arXiv:2202.13748</a> doi: <a href="http://dx.doi.org/10.1088/1751-8121/ac78ab" target="_blank">10.1088/1751-8121/ac78ab</a></li>
 
@@ -122,6 +122,9 @@
 				
 				<h5>Ecuaciones diferenciales. Grado en Física</h5>
 				<p>Universidad Internacional de La Rioja. <a href="https://www.unir.net/" target="_blank">UNIR</a>. <a href="docs/guies_docents/ecuaciones-diferenciales.pdf" target="_blank">Programación</a>.</p>
+				
+				<h5>Análisis dinámico. Grado en Economia</h5>
+				<p>Universidad Internacional de La Rioja. <a href="https://www.unir.net/" target="_blank">UNIR</a>. <a href="https://cms.unir.net/graeco12_Analisis_Dinamico" target="_blank">Programación</a>.</p>
 
 				<h4>Old courses</h4>
 				<ul class="ms-4">
